# freenetconfd

./: .gitignore  CMakeLists.txt  COPYING  README.md
config/: freenetconfd
debian/: changelog  control  rules
include/freenetconfd/: datastore.h  freenetconfd.h  netconf.h  plugin.h
plugins/: ietf-system.c
src/: config.c  config.h  connection.c  connection.h  datastore.c  datastore.h  dmconfig.c  dmconfig.h  freenetconfd.c  freenetconfd.h  messages.h  methods.c  methods.h  modules.c  modules.h  netconf.c  netconf.h  ssh.c  ssh.h  ubus.c  ubus.h  xml.c  xml.h
yang/: iana-crypt-hash.yang  ietf-netconf-acm.yang
