cmake_minimum_required(VERSION 2.6)
PROJECT(freenetconfd)
#ADD_DEFINITIONS(-Os -Wall -Werror --std=gnu99 -Wmissing-declarations)
ADD_DEFINITIONS(-Os -Wall --std=gnu99 -Wmissing-declarations -D_GNU_SOURCE)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/build/modules")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(SOURCES
	src/freenetconfd.c
	src/freenetconfd.h
	src/ssh.c
	src/ssh.h
	src/xml.c
	src/xml.h
	src/config.c
)

ADD_EXECUTABLE(freenetconfd ${SOURCES})

FIND_PACKAGE(LIBSSH REQUIRED)
INCLUDE_DIRECTORIES(${LIBSSH_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(freenetconfd ${LIBSSH_LIBRARIES})

FIND_PACKAGE(LIBUBOX REQUIRED)
INCLUDE_DIRECTORIES(${LIBUBOX_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(freenetconfd ${LIBUBOX_LIBRARIES})

FIND_PACKAGE(LIBROXML REQUIRED)
INCLUDE_DIRECTORIES(${LIBROXML_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(freenetconfd ${LIBROXML_LIBRARIES})

FIND_PACKAGE(UCI REQUIRED)
INCLUDE_DIRECTORIES(${UCI_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(freenetconfd ${UCI_LIBRARIES})

INSTALL(TARGETS freenetconfd RUNTIME DESTINATION bin)
